@@ -1,4 +1,6 @@
 
+  - write metafile as we go, instead of big bang at the end (Gavin Carr)
+
   - add Brackup::BackupStats implementation, brackup stats output, and 
     --save-stats argument (Gavin Carr)
 
